--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "fix": "eslint --max-warnings=0 --ext .tsx --ext .ts --fix",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
