--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crazy-about-typo",
+  "name": "crazy-about-typo-front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
