--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "firebase": "^8.6.1",
+    "firebaseui": "^4.8.0",
     "framer-motion": "^4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-firebaseui": "^5.0.2",
     "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
